fix: 添加 GitHub Actions 创建 Release 所需权限
修复 403 权限错误，允许 workflow 创建 Release 和上传文件

变更：添加 permissions.contents: write 到 workflow

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build-windows:
     runs-on: windows-latest
+    permissions:
+      contents: write  # 允许创建 Release 和上传文件
 
     steps:
     - name: Checkout代码
