--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -63,7 +63,7 @@ jobs:
           5. 浏览器访问 http://localhost:5000
 
           ### 🔑 登录认证
-          - **管理员模式**：密码 `GPU-admin@renzhihan-2025`（可修改代码自定义）
+          - **管理员模式**：密码 `admin`（可修改代码自定义）
           - **用户模式**：无需密码，只读访问
 
           ### 📚 完整文档
