fix: 修复 Windows 打包问题
问题修复：
1. ✅ 添加 config/servers.yaml.example 到打包目录
   - 修复启动时报错"未找到 config\servers.yaml.example"
   - 确保首次运行可以正常创建配置文件

2. ✅ 解决双层压缩问题
   - Artifacts: 直接上传目录，由 GitHub 自动压缩
   - Release: 手动创建单层 zip 压缩包
   - 避免"压缩包里还有压缩包"的问题

变更文件：
- .github/workflows/build-windows.yml
  - 添加 servers.yaml.example 复制步骤
  - 分离 Artifacts 和 Release 的压缩逻辑

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,21 +31,23 @@ jobs:
       run: |
         pyinstaller build_windows.spec
 
-    - name: 复制额外文件
+    - name: 复制额外文件到打包目录
       run: |
         Copy-Item START_WINDOWS.bat dist\GPU-Server-Manager\
         Copy-Item README.md dist\GPU-Server-Manager\
         Copy-Item .env.example dist\GPU-Server-Manager\
+        Copy-Item config\servers.yaml.example dist\GPU-Server-Manager\config\
 
-    - name: 创建发布包
-      run: |
-        Compress-Archive -Path dist\GPU-Server-Manager\* -DestinationPath GPU-Server-Manager-Windows.zip
-
-    - name: 上传构建产物
+    - name: 上传构建产物（直接上传目录，不额外压缩）
       uses: actions/upload-artifact@v4
       with:
         name: GPU-Server-Manager-Windows
-        path: GPU-Server-Manager-Windows.zip
+        path: dist/GPU-Server-Manager/
+
+    - name: 创建Release压缩包（仅用于Release）
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        Compress-Archive -Path dist\GPU-Server-Manager\* -DestinationPath GPU-Server-Manager-Windows.zip
 
     - name: 创建Release（如果是标签触发）
       if: startsWith(github.ref, 'refs/tags/')
