fix: 在复制配置文件前先创建 config 目录
修复 GitHub Actions 构建错误：
- 添加 New-Item 创建 config 目录
- 确保目录存在后再复制文件

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -36,6 +36,7 @@ jobs:
         Copy-Item START_WINDOWS.bat dist\GPU-Server-Manager\
         Copy-Item README.md dist\GPU-Server-Manager\
         Copy-Item .env.example dist\GPU-Server-Manager\
+        New-Item -ItemType Directory -Force -Path dist\GPU-Server-Manager\config
         Copy-Item config\servers.yaml.example dist\GPU-Server-Manager\config\
 
     - name: 上传构建产物（直接上传目录，不额外压缩）
