ci: 配置每次push自动触发构建和release
修改内容：
1. 添加main分支push触发条件
   - 原来：仅在push tag时触发
   - 现在：push到main分支或tag都会触发

2. 自动生成版本号
   - Tag触发：使用tag名称作为版本号（如 v1.0.8）
   - Push触发：生成开发版本号（如 dev-20251121-143025）

3. 区分正式版和开发版
   - Tag触发：创建正式版release（prerelease=false）
   - Push触发：创建预发布版release（prerelease=true）

4. 增强Release信息
   - 显示版本号和提交SHA
   - 自动提取最新commit message作为更新内容

行为变化：
- 每次git push到main分支 → 自动构建 + 创建开发版release
- 每次git push tag → 自动构建 + 创建正式版release

优点：
- 无需手动创建tag即可获得构建产物
- 开发版和正式版清晰区分
- 每个release都包含详细的更新说明

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,6 +2,8 @@ name: Build Windows EXE
 
 on:
   push:
+    branches:
+      - main  # 推送到main分支时触发
     tags:
       - 'v*'  # 当推送版本标签时触发（如 v1.0.0）
   workflow_dispatch:  # 允许手动触发
@@ -45,18 +47,45 @@ jobs:
         name: GPU-Server-Manager-Windows
         path: dist/GPU-Server-Manager/
 
-    - name: 创建Release压缩包（仅用于Release）
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: 创建Release压缩包
       run: |
         Compress-Archive -Path dist\GPU-Server-Manager\* -DestinationPath GPU-Server-Manager-Windows.zip
 
-    - name: 创建Release（如果是标签触发）
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: 生成版本号和Release信息
+      id: release_info
+      shell: bash
+      run: |
+        if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+          # 如果是tag触发，使用tag作为版本号
+          VERSION="${{ github.ref_name }}"
+          IS_PRERELEASE="false"
+        else
+          # 如果是push触发，生成基于时间的版本号
+          VERSION="dev-$(date +'%Y%m%d-%H%M%S')"
+          IS_PRERELEASE="true"
+        fi
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "is_prerelease=$IS_PRERELEASE" >> $GITHUB_OUTPUT
+        echo "commit_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        echo "commit_msg=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
+
+    - name: 创建或更新Release
       uses: softprops/action-gh-release@v1
       with:
+        tag_name: ${{ steps.release_info.outputs.version }}
+        name: Release ${{ steps.release_info.outputs.version }}
+        prerelease: ${{ steps.release_info.outputs.is_prerelease }}
         files: GPU-Server-Manager-Windows.zip
         body: |
           ## GPU 服务器管理系统 - Windows版本
+
+          **版本**: ${{ steps.release_info.outputs.version }}
+          **提交**: ${{ steps.release_info.outputs.commit_sha }}
+
+          ### 📝 更新内容
+          ```
+          ${{ steps.release_info.outputs.commit_msg }}
+          ```
 
           ### 📦 安装说明
           1. 解压 GPU-Server-Manager-Windows.zip
