fix: 修复GitHub Actions多行commit message解析错误
问题：
- commit message包含多行文本和特殊字符
- 使用单行格式 echo "commit_msg=$(...) 导致解析失败
- 错误：Invalid format '修改内容：'

解决方案：
- 使用heredoc格式处理多行输出
- 格式：echo "key<<EOF" >> $GITHUB_OUTPUT
- 这是GitHub Actions推荐的多行变量处理方式

参考：
https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#multiline-strings

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -67,7 +67,12 @@ jobs:
         echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "is_prerelease=$IS_PRERELEASE" >> $GITHUB_OUTPUT
         echo "commit_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-        echo "commit_msg=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
+
+        # 获取commit message（处理多行文本）
+        COMMIT_MSG=$(git log -1 --pretty=%B)
+        echo "commit_msg<<EOF" >> $GITHUB_OUTPUT
+        echo "$COMMIT_MSG" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
 
     - name: 创建或更新Release
       uses: softprops/action-gh-release@v1
