refactor: 代码质量和可维护性全面提升
📊 代码质量改进:

1. **统一日志系统** (app/utils/logger.py)
   - 创建 LoggerFactory 日志工厂类
   - 滚动日志文件（10MB x 5个备份）
   - 开发模式自动输出到控制台
   - 替代散乱的 print 语句

2. **类型注解增强**
   - 为关键函数添加类型提示
   - 提升代码可读性和IDE支持
   - 示例: Dict[str, Any], List[str], Optional[int]

3. **异常处理改进**
   - 修复所有裸 except: 语句
   - 改为 except Exception as e
   - 添加详细错误日志记录

4. **logging 替代 print**
   - ssh_manager.py: print → logger
   - app/__init__.py: print → logger
   - api.py: print → logger
   - 统一日志格式和级别控制

✨ 新增功能:

5. **健康检查端点** (/api/health)
   - 无需认证的系统状态检查
   - 返回版本、运行时间、资源使用
   - 支持监控系统集成
   - 检查功能可用性（WebSocket, HTTPS, 审计日志）

6. **首次启动配置向导** (app/utils/setup_wizard.py)
   - 自动检测首次启动
   - 交互式配置流程
   - 引导设置管理员密码
   - 自动生成 SECRET_KEY
   - 自动创建服务器配置文件
   - 创建 .configured 标记文件

📁 文件组织:

7. **完善 .env.example**
   - 详细的配置说明
   - 安全警告和最佳实践
   - 配置检查清单
   - 常用邮箱SMTP配置

8. **更新 .gitignore**
   - 明确排除 logs/ 目录
   - 添加 .configured 标记文件
   - 添加注释说明

技术改进:
- 使用 RotatingFileHandler 防止日志文件无限增长
- 所有日志统一存储在 logs/ 目录
- 应用日志 (app.log) 和审计日志 (audit.log) 分离
- 支持通过 FLASK_ENV 控制日志输出位置

开发体验:
- 首次启动自动引导配置
- 清晰的日志输出帮助调试
- 类型提示提升IDE智能感知
- 规范的异常处理便于问题定位

健康检查示例:
```bash
curl http://localhost:5000/api/health
```

返回示例:
```json
{
  "status": "healthy",
  "version": "1.0.10",
  "uptime": {"human": "5分钟"},
  "system": {"cpu_percent": 12.5, "memory_percent": 45.2},
  "features": {"websocket": true, "https": true}
}
```

影响:
- 代码可维护性显著提升
- 生产环境日志管理更专业
- 新用户上手更容易
- 系统监控更便捷

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,108 @@
-# Flask 配置
+# ====================================================================
+# GPU Server Manager 配置文件
+# ====================================================================
+#
+# ⚠️ 重要安全提示：
+# 1. 复制此文件为 .env：cp .env.example .env
+# 2. 修改所有标记为 [必须修改] 的配置项
+# 3. 确保 .env 文件权限为 600：chmod 600 .env
+# 4. 不要将 .env 文件提交到 Git
+#
+# ====================================================================
+
+# --------------------------------------------------------------------
+# Flask 基础配置
+# --------------------------------------------------------------------
+
+# 运行环境：development（开发） 或 production（生产）
 FLASK_ENV=development
+
+# [必须修改] Flask Secret Key - 用于加密Session
+# ⚠️ 使用默认值会导致严重安全风险！Session可被伪造
+# 生成命令: python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY=your-secret-key-change-this
+
+# Flask 监听端口
 FLASK_PORT=5000
 
-# 邮件配置
+# Flask 监听地址
+# 127.0.0.1 - 仅本机访问（最安全）
+# 0.0.0.0   - 所有网络接口（需配合防火墙）
+FLASK_HOST=127.0.0.1
+
+# --------------------------------------------------------------------
+# CORS 跨域配置（安全）
+# --------------------------------------------------------------------
+
+# 允许的访问来源（逗号分隔）
+# 默认仅允许本地访问，如需其他域名请明确添加
+CORS_ORIGINS=http://localhost:5000,http://127.0.0.1:5000
+# 生产环境示例：
+# CORS_ORIGINS=https://gpu-manager.yourdomain.com
+
+# --------------------------------------------------------------------
+# 管理员认证配置
+# --------------------------------------------------------------------
+
+ADMIN_USERNAME=admin
+
+# [必须修改] 管理员密码
+# ⚠️ 默认密码极其不安全，必须修改为强密码！
+# 强密码要求：
+# - 至少16个字符
+# - 包含大小写字母、数字和特殊字符
+# - 不包含常见单词
+# 示例: MyStr0ng!P@ssw0rd#2024
+ADMIN_PASSWORD=PLEASE_CHANGE_THIS_PASSWORD
+
+# --------------------------------------------------------------------
+# 邮件通知配置（可选）
+# --------------------------------------------------------------------
+
+# SMTP 服务器配置
+# 常用配置：
+# - QQ邮箱：smtp.qq.com, 端口587（推荐）或465
+# - 163邮箱：smtp.163.com, 端口465
+# - Gmail：smtp.gmail.com, 端口587
+# - Outlook：smtp.office365.com, 端口587
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
+
+# 发件邮箱地址
 SMTP_USERNAME=your-email@gmail.com
+
+# 邮箱授权码（不是登录密码！）
+# QQ邮箱：设置 → 账户 → POP3/SMTP服务 → 生成授权码
+# Gmail：开启两步验证 → 应用专用密码
 SMTP_PASSWORD=your-app-password
+
+# 发件人显示地址
 SMTP_FROM=your-email@gmail.com
 
-# 管理员配置
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+# 是否使用TLS加密
+SMTP_USE_TLS=True
 
-# 数据库配置（可选，用于存储任务历史）
+# --------------------------------------------------------------------
+# 可选：数据库配置
+# --------------------------------------------------------------------
+
+# SQLite数据库路径（用于存储任务历史等）
 # DATABASE_URL=sqlite:///data/app.db
+
+# --------------------------------------------------------------------
+# 配置完成后的检查清单
+# --------------------------------------------------------------------
+#
+# [ ] 已修改 ADMIN_PASSWORD 为强密码
+# [ ] 已生成并设置 SECRET_KEY
+# [ ] 已配置 FLASK_HOST（推荐 127.0.0.1）
+# [ ] 已设置 .env 文件权限为 600
+# [ ] 如需邮件通知，已配置 SMTP 信息
+# [ ] 如需HTTPS，已生成 SSL 证书
+# [ ] 已阅读 SECURITY.md 安全指南
+#
+# 启动命令：
+# - HTTP模式：python run.py --host 127.0.0.1
+# - HTTPS模式：python run.py --https --host 127.0.0.1
+#
+# ====================================================================
